--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <build/>
   <modules>
   	<module>WeiXin-Concat</module>
+  	<module>WeiXin-Subscribe</module>
   </modules>
 <dependencyManagement>
     <dependencies>
