--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   	<module>WeiXin-Payment</module>
   	<module>WeiXin-Common</module>
   </modules>
+  
 <dependencyManagement>
     <dependencies>
         <dependency>
@@ -23,5 +24,55 @@
         </dependency>
     </dependencies>
 </dependencyManagement>
+    <dependencies>
   
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+    <dependency>
+   		<groupId>com.fasterxml.jackson.dataformat</groupId>
+   		<artifactId>jackson-dataformat-xml</artifactId>
+	</dependency>
+    <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpasyncclient</artifactId>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
+	<dependency>
+    	<groupId>com.google.zxing</groupId>
+    	<artifactId>core</artifactId>
+    	<version>3.3.1</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.google.zxing</groupId>
+    	<artifactId>javase</artifactId>
+    	<version>3.3.1</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.google.zxing</groupId>
+    	<artifactId>zxing-parent</artifactId>
+    	<version>3.3.1</version>
+    	<type>pom</type>
+	</dependency>  
+  </dependencies>
 </project>
