--- a/WeiXin-Common/pom.xml
+++ b/WeiXin-Common/pom.xml
@@ -2,17 +2,12 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.young.weixin</groupId>
-    <artifactId>WeiXin-Service</artifactId>
+    <artifactId>WeiXin-Parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>WeiXin-Common</artifactId>
   <build/>
   <dependencies>
-  <dependency>
-    <groupId>commons-codec</groupId>
-    <artifactId>commons-codec</artifactId>
-    <version>1.9</version>
-</dependency>
   
   </dependencies>
 </project>
