--- a/WeiXin-Payment/pom.xml
+++ b/WeiXin-Payment/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.young.weixin</groupId>
-    <artifactId>WeiXin-Service</artifactId>
+    <artifactId>WeiXin-Parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>WeiXin-Payment</artifactId>
