--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.young.weixin</groupId>
-  <artifactId>WeiXin-Service</artifactId>
+  <artifactId>WeiXin-Parent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <build/>
@@ -11,6 +11,7 @@
   	<module>WeiXin-Program</module>
   	<module>WeiXin-Payment</module>
   	<module>WeiXin-Common</module>
+  	<module>WeiXin-Service</module>
   </modules>
   
 <dependencyManagement>
@@ -25,7 +26,12 @@
     </dependencies>
 </dependencyManagement>
     <dependencies>
-  
+  		
+  	<dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-configuration-processor</artifactId>
+  		<optional>true</optional>
+  	</dependency>	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
