--- a/WeiXin-Subscribe/pom.xml
+++ b/WeiXin-Subscribe/pom.xml
@@ -1,17 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.young.weixin</groupId>
-    <artifactId>WeiXin-Parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>WeiXin-Subscribe</artifactId>
-  <build/>
-  <dependencies>
-  	<dependency>
-  		<groupId>com.young.weixin</groupId>
-  		<artifactId>WeiXin-Common</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
-	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.young.weixin</groupId>
+		<artifactId>WeiXin-Parent</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>WeiXin-Subscribe</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>com.young.weixin</groupId>
+			<artifactId>WeiXin-Common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 </project>
